log
Sun Mar 13 12:21:01 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
8fbadfa
Sun Mar 13 12:27:53 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
50c337e
Sun Mar 13 12:36:25 UTC 2022: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
579c97e
Sun Mar 13 12:40:15 UTC 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearVector’:
exercises.c:79:30: error: implicit declaration of function ‘sixeof’; did you mean ‘sinhf’? [-Werror=implicit-function-declaration]
   int *vector=(int*)calloc(n,sixeof(int));
                              ^~~~~~
                              sinhf
exercises.c:79:37: error: expected expression before ‘int’
   int *vector=(int*)calloc(n,sixeof(int));
                                     ^~~
exercises.c:80:11: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return vector;
           ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
bb32647
